corregido enrutamiento con HashRouter para funcionamiento en Electron

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo/C.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Inventario</title>
-    
   </head>
   <body>
+    <noscript>Necesitas habilitar JavaScript para usar esta aplicación.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
